// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FontsSelect correct render should correct render with window for font selection 1`] = `
<DocumentFragment>
  <div
    id="font"
  >
    <div
      id="current-font"
    >
      <p>
        Sans Serif
      </p>
      <div
        height="6"
        width="12"
      />
    </div>
    <ul
      hidden=""
      id="select-font"
    >
      <li>
        Sans Serif
      </li>
      <li>
        Serif
      </li>
      <li>
        Mono
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`FontsSelect correct render should correct render without window for font selection 1`] = `
<DocumentFragment>
  <div
    id="font"
  >
    <div
      id="current-font"
    >
      <p>
        Sans Serif
      </p>
      <div
        height="6"
        width="12"
      />
    </div>
    <ul
      id="select-font"
    >
      <li>
        Sans Serif
      </li>
      <li>
        Serif
      </li>
      <li>
        Mono
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
